<resources>
    <string name="app_name">imadCalculator2</string>
    <string name="add">ADD</string>
    <string name="sub">SUBTRACT</string>
    <string name="mul">MULTIPLY</string>
    <string name="div">DIVIDE</string>
    <string name="sqr">SQURE ROOT</string>
    <string name="pwr">POWER</string>
    <string name="total">TOTAL</string>
    <string name="addlist">ADD TO LIST</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="average">AVERAGE</string>
    <string name="clear">CLEAR</string>
</resources>