<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddToList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addlist" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btnTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total" />

    <Button
        android:id="@+id/btnHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high" />

    <Button
        android:id="@+id/btnLow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/low" />

    <Button
        android:id="@+id/btnAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/tvOutput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="12sp" />
</LinearLayout>